# rating-stablecoin-logic

./: .gitignore  README.md  project.yaml  rating_indexer.tmp.did
artifacts/: canister_ids.json  dfx.json
components/: activeaddress.yaml  autocorrelation.yaml  deviation.yaml  dexliquidity.yaml  indexer.yaml  rating.yaml  rating_indexer.yaml  sample_algorithm_indexer.yaml  sample_event_indexer.yaml  sample_relayer.yaml  sample_snapshot_indexer_evm.yaml  sample_snapshot_indexer_https.yaml  sample_snapshot_indexer_icp.yaml  txvolume.yaml  variance.yaml
interfaces/: bulk_snapshot_indexer_https_push.did
src/: Cargo.toml
src/canisters/rating_indexer/: Cargo.toml  rating_indexer.did
src/canisters/rating_indexer/src/: calculator.rs  lib.rs  types.rs
src/logics/activeaddress/: Cargo.toml
src/logics/activeaddress/src/: lib.rs
src/logics/autocorrelation/: Cargo.toml
src/logics/autocorrelation/src/: lib.rs
src/logics/common/: Cargo.toml
src/logics/common/src/: lib.rs  types.rs
src/logics/deviation/: Cargo.toml
src/logics/deviation/src/: lib.rs
src/logics/dexliquidity/: Cargo.toml
src/logics/dexliquidity/src/: lib.rs
src/logics/indexer/: Cargo.toml
src/logics/indexer/src/: lib.rs
src/logics/rating/: Cargo.toml
src/logics/rating/src/: lib.rs
src/logics/rating_indexer/: Cargo.toml
src/logics/rating_indexer/src/: lib.rs  rating.rs  types.rs
src/logics/txvolume/: Cargo.toml
src/logics/txvolume/src/: lib.rs
src/logics/variance/: Cargo.toml
src/logics/variance/src/: lib.rs
